@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-10-01" />
+<meta name="date" content="2010-10-04" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-10-01</td></tr>
+<td>2010-10-04</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -722,9 +722,9 @@ dragging the dividers.</p>
 <h2><a class="toc-backref" href="#id28" id="command-line-options" name="command-line-options">Command line options</a></h2>
 <table border="1" class="docutils">
 <colgroup>
-<col width="13%" />
-<col width="25%" />
-<col width="62%" />
+<col width="9%" />
+<col width="18%" />
+<col width="72%" />
 </colgroup>
 <thead valign="bottom">
 <tr><th class="head">Short option</th>
@@ -822,11 +822,11 @@ available if Geany was compiled with support for VTE.</td>
 <tr><td><em>none</em></td>
 <td>--socket-file</td>
 <td><p class="first">Use this socket filename for communication with a
-running Geany instance. By default Geany uses one
-socket file per workspace for X Windows, otherwise
-only one.</p>
-<p class="last">Example:
-geany --socket-file=/tmp/geany-sock-2</p>
+running Geany instance. This can be used with the following
+command to execute Geany on the current workspace:</p>
+<pre class="last literal-block">
+geany --socket-file=/tmp/geany-sock-$(xprop -root _NET_CURRENT_DESKTOP | awk '{print $3}')
+</pre>
 </td>
 </tr>
 <tr><td><em>none</em></td>
@@ -6256,7 +6256,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-10-04 11:04 UTC.
+Generated on: 2010-10-07 14:02 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
